[gd_scene load_steps=12 format=2]

[ext_resource path="res://hud/Shop.png" type="Texture" id=1]
[ext_resource path="res://hud/no.png" type="Texture" id=2]
[ext_resource path="res://hud/no_high.png" type="Texture" id=3]
[ext_resource path="res://weapons/sprites/2Revolver.png" type="Texture" id=4]
[ext_resource path="res://powerups/Heart.png" type="Texture" id=5]
[ext_resource path="res://powerups/Ammo.png" type="Texture" id=6]
[ext_resource path="res://hud/Monocraft.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://powerups/Coin.png" type="Texture" id=8]
[ext_resource path="res://hud/Shop.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 7 )

[node name="Shop" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 44.0
rect_scale = Vector2( 26.257, 15.2483 )
color = Color( 0, 0, 0, 0.372549 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 285.0
margin_top = 60.0
margin_right = 325.0
margin_bottom = 100.0
rect_scale = Vector2( 12, 12 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Esc" type="TextureButton" parent="."]
margin_left = 705.0
margin_top = 61.0
margin_right = 745.0
margin_bottom = 101.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true

[node name="Weapon" type="Control" parent="."]
margin_left = 397.0
margin_top = 185.0
margin_right = 437.0
margin_bottom = 225.0

[node name="Panel" type="Panel" parent="Weapon"]
modulate = Color( 1, 1, 1, 0.572549 )
margin_left = -10.0
margin_top = 18.0
margin_right = 30.0
margin_bottom = 58.0
rect_scale = Vector2( 2.61561, 2.61702 )

[node name="Icon" type="TextureRect" parent="Weapon"]
margin_left = -36.0
margin_top = -38.0
margin_right = 4.0
margin_bottom = 2.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Price" type="Label" parent="Weapon"]
margin_left = 34.0
margin_top = 83.0
margin_right = 74.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "500"

[node name="TextureRect" type="TextureRect" parent="Weapon/Price"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 39.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="Weapon"]
margin_left = 20.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "BUY"

[node name="Ammo" type="Control" parent="."]
margin_left = 561.0
margin_top = 185.0
margin_right = 601.0
margin_bottom = 225.0

[node name="Panel" type="Panel" parent="Ammo"]
modulate = Color( 1, 1, 1, 0.572549 )
margin_left = -10.0
margin_top = 18.0
margin_right = 30.0
margin_bottom = 58.0
rect_scale = Vector2( 2.61561, 2.61702 )

[node name="Icon" type="TextureRect" parent="Ammo"]
margin_left = -36.0
margin_top = -28.0
margin_right = 4.0
margin_bottom = 12.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Price" type="Label" parent="Ammo"]
margin_left = 34.0
margin_top = 83.0
margin_right = 74.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "100
"

[node name="TextureRect" type="TextureRect" parent="Ammo/Price"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 39.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Ammo_Button" type="Button" parent="Ammo"]
margin_left = 20.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "BUY"

[node name="Health" type="Control" parent="."]
margin_left = 476.0
margin_top = 306.0
margin_right = 516.0
margin_bottom = 346.0

[node name="Panel" type="Panel" parent="Health"]
modulate = Color( 1, 1, 1, 0.572549 )
margin_left = -10.0
margin_top = 18.0
margin_right = 30.0
margin_bottom = 58.0
rect_scale = Vector2( 2.61561, 2.61702 )

[node name="Icon" type="TextureRect" parent="Health"]
margin_left = -36.0
margin_top = -29.0
margin_right = 4.0
margin_bottom = 11.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Price" type="Label" parent="Health"]
margin_left = 34.0
margin_top = 83.0
margin_right = 74.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 1 )
text = "200

"

[node name="TextureRect" type="TextureRect" parent="Health/Price"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 39.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Health_Button" type="Button" parent="Health"]
margin_left = 20.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "BUY"

[connection signal="pressed" from="Esc" to="." method="_on_Esc_pressed"]
[connection signal="pressed" from="Ammo/Ammo_Button" to="." method="_on_Ammo_Button_pressed"]
[connection signal="pressed" from="Health/Health_Button" to="." method="_on_Health_Button_pressed"]
